@@ -25,12 +25,17 @@
     * menu icons have been improved.
     * cleaning thread only cleans test tables if platform is Windows.
     * a new close window has been designed.
+    * a name has been given to all threads collecting data for logging purpose.
+
 
   * FIXED:
     * few corrections to make the weather station works on raspberry pi.
     * the size of all splitter handlers has been fixed.
     * an issue with a section of the config file has been fixed.
     * fixed an issue with data display.
+    * the syncing function now works with all users.
+    * sensor dict is now used properly in all threads collecting data.
+    * fixed an issue preventing the deletion of a sensor in BME280 window
 
 ### March 5 2021, Release version 0.10.1 ###
 
